@@ -1,3 +1,7 @@
+2008-07-01  Martin Lambers <marlam@marlam.de>
+
+	* gllib/glvm.h: Add cbrt() functions.
+
 2008-06-30  Martin Lambers <marlam@marlam.de>
 
 	* src/view_area.cpp: Normalize rotation quaternion to guarantee that
